--- a/server/webApp/data/version.toml
+++ b/server/webApp/data/version.toml
@@ -4,4 +4,4 @@ bug = 1212
 build_hash = ""
 build_date_in_millis = 1719934781714
 full_version = "v0.0.1212_1719934781714"
-app_mode = "container"
+app_mode = "local"
