--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,11 +1,11 @@
- ./whls/jadnschema-0.2.21-py2.py3-none-any.whl
+ ./whls/jadnschema-0.2.22-py2.py3-none-any.whl
  ./whls/jadnxml-1.8.0-py2.py3-none-any.whl
  ./whls/jadnjson-1.2.0-py2.py3-none-any.whl
 # -e /home/matt/screamingbunny/Schema/jadnschema
 # -e /home/matt/workspace/sb-jadn-xml-util
 # -e /home/matt/workspace/sb-jadn-json-util
 # -e /home/kaitlyn_hsu/ScreamingBunnyRepo/Schema/jadnschema
-cbor2 # Use version from JADNSchema
+
 cbor-json==0.0.4
 docker==7.1.0
 Flask==2.3.1
@@ -13,8 +13,11 @@ flask-cors==3.0.10
 flask_restful==0.3.9
 flask-restplus==0.13.0
 gunicorn==20.1.0
-jadn==0.6.22
 json2xml==5.0.2
-lxml  # Use version from JADNSchema
-toml==0.10.2
 weasyprint==57.0
+
+# Use versions from JADNSchema
+cbor2 
+jadn  
+lxml
+toml
