--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,6 @@
-#  ./whls/jadnschema-0.2.22-py2.py3-none-any.whl
- /home/matthewroberts/workspace/jadn-sandbox/server/whls/jadnschema-0.2.22-py2.py3-none-any.whl
-#  ./whls/jadnxml-1.8.0-py2.py3-none-any.whl
- /home/matthewroberts/workspace/jadn-sandbox/server/whls/jadnxml-1.8.0-py2.py3-none-any.whl
-#  ./whls/jadnjson-1.2.0-py2.py3-none-any.whl
- /home/matthewroberts/workspace/jadn-sandbox/server//whls/jadnjson-1.2.0-py2.py3-none-any.whl
+./whls/jadnschema-0.2.22-py2.py3-none-any.whl
+./whls/jadnxml-1.8.0-py2.py3-none-any.whl
+./whls/jadnjson-1.2.0-py2.py3-none-any.whl
 # -e /home/matt/screamingbunny/Schema/jadnschema
 # -e /home/matt/workspace/sb-jadn-xml-util
 # -e /home/matt/workspace/sb-jadn-json-util
