--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,9 +2,10 @@
 ./whls/jadnxml-1.8.0-py2.py3-none-any.whl
 ./whls/jadnjson-1.2.0-py2.py3-none-any.whl
 
+# -e /home/matt/workspace/jadn-schema
 # -e /home/matt/workspace/sb-jadn-xml-util
 # -e /home/matt/workspace/sb-jadn-json-util
-# -e /home/matt/workspace/jadn-schema
+-e /home/matt/workspace/jadn-pypkg/distribution
 
 cbor-json==0.0.4
 docker==7.1.0
@@ -18,6 +19,6 @@ weasyprint==57.0
 
 # Use versions from JADNSchema
 cbor2 
-jadn
+# jadn
 lxml
 toml
