--- a/server/webApp/data/version.toml
+++ b/server/webApp/data/version.toml
@@ -4,4 +4,4 @@ bug = 0
 build_hash = ""
 build_date_in_millis = 1722521152765
 full_version = "v0.13.0_1722521152765"
-app_mode = "container"
+app_mode = "local"
