--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,7 +13,7 @@ docker==7.1.0
 Flask==2.3.1
 flask-cors==3.0.10
 flask_restful==0.3.9
-flask-restplus==0.13.0
+# flask-restplus==0.13.0
 gunicorn==20.1.0
 json2xml==5.0.2
 weasyprint==57.0
