--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "@uiw/codemirror-extensions-langs": "^4.21.20",
     "@uiw/codemirror-themes-all": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
-    "bootstrap": "5.3.2",
+    "bootstrap": "5.3.8",
     "buffer": "^6.0.3",
     "codemirror": "^6.0.1",
     "connected-react-router": "^6.9.3",
@@ -37,6 +37,7 @@
     "jstoxml": "^5.0.0",
     "lodash": "^4.17.21",
     "marked": "^9.1.1",
+    "node-sass": "^9.0.0",
     "plantuml-encoder": "^1.4.0",
     "randexp": "^0.5.3",
     "react": "^18.2.0",
@@ -60,7 +61,6 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "sass": "^1.90.0",
     "uuid": "^9.0.1",
     "vkbeautify": "^0.99.3"
   },
