--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@
 ./whls/jadnxml-1.12.0-py2.py3-none-any.whl
 ./whls/jadnjson-1.4.0-py2.py3-none-any.whl
 ./whls/jadnvalidation-2.0.0-py2.py3-none-any.whl
+./whls/jadnutils-0.1.0-py2.py3-none-any.whl
 
 # -e /Users/kevincressman/GitLabThings/jadn-schema
 # -e /home/matt/workspace/sb-jadn-xml-util
