--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,7 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+package-lock.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
