--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "@lagunovsky/redux-react-router": "^4.5.0",
     "@popperjs/core": "^2.11.8",
     "@types/jstoxml": "^5.0.0",
     "@types/react-virtualized-auto-sizer": "^1.0.8",
@@ -25,7 +26,6 @@
     "bootstrap": "5.3.8",
     "buffer": "^6.0.3",
     "codemirror": "^6.0.2",
-    "connected-react-router": "^6.9.3",
     "d3-graphviz": "^5.6.0",
     "dayjs": "^1.11.18",
     "dompurify": "^3.2.7",
