--- a/server/webApp/app_data/version.toml
+++ b/server/webApp/app_data/version.toml
@@ -1,7 +1,7 @@
 major = 0
-minor = 15
-bug = 1
+minor = 16
+bug = 0
 build_hash = ""
-build_date_in_millis = 1758730783728
-full_version = "v0.15.1_1758730783728"
-app_mode = "local"
+build_date_in_millis = 1760468327154
+full_version = "v0.16.0_1760468327154"
+app_mode = "container"
