--- a/server/webApp/app_data/version.toml
+++ b/server/webApp/app_data/version.toml
@@ -1,7 +1,7 @@
 major = 0
 minor = 16
-bug = 0
+bug = 2
 build_hash = ""
-build_date_in_millis = 1760539237340
-full_version = "v0.16.0_1760539237340"
-app_mode = "local"
+build_date_in_millis = 1764351721316
+full_version = "v0.16.2_1764351721316"
+app_mode = "container"
