--- a/server/webApp/app_data/version.toml
+++ b/server/webApp/app_data/version.toml
@@ -4,4 +4,4 @@ bug = 0
 build_hash = ""
 build_date_in_millis = 1765391456793
 full_version = "v0.17.0_1765391456793"
-app_mode = "container"
+app_mode = "local"
